# traffic-light-simulator

./: flake.nix  meson.build
nix/: default.nix  lib.nix  overlays.nix  shell.nix
src/: main.c
